wordpress/02-wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
    app.kubernetes.io/name: wordpress
    app.kubernetes.io/instance: wordpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress
      app.kubernetes.io/name: wordpress
      app.kubernetes.io/instance: wordpress
  template:
    metadata:
      labels:
        app: wordpress
        app.kubernetes.io/name: wordpress
        app.kubernetes.io/instance: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.5-apache
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          volumeMounts:
            - name: wp-content
              mountPath: /var/www/html/wp-content
      volumes:
        - name: wp-content
          persistentVolumeClaim:
            claimName: pvc-wp-content
