wordpress/03-wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: wordpress
 namespace: wordpress
 labels:
   app: wordpress
spec:
 type: ClusterIP
 selector:
   app: wordpress
 ports:
   - name: http
     port: 80
     targetPort: 80
