wordpress/04-wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: wordpress
 namespace: wordpress
spec:
 rules:
   - host: wordpress.afpa-devops.lab
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: wordpress
               port:
                number: 80
